Fix responsive on small screen2 & fix email sensitive case on login

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ h2::after {
     display: none !important;
 }
 
+#reg-sucess{
+    font-size: 1.5rem;
+}
+
 form {
     padding: 25px;
 }
